screenshotter_ui/config/kubernetes/production/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: screenshotter-ui
  namespace: screenshotter
  labels:
    app: screenshotter-ui
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: screenshotter-ui
  template:
    metadata:
      namespace: screenshotter
      labels:
        app: screenshotter-ui
    spec:
      containers:
      - name: screenshotter-ui
        image: austinbittinger/screenshotter-ui:latest
        ports:
        - containerPort: 80
